<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="password">Nhập mật khẩu</string>
    <string name="email">Nhập tài khoản</string>
    <string name="phone">Nhập số điện thoại</string>
    <string name="username">Nhập họ tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="login">Login</string>
    <string name="sign_up">Register</string>
    <string name="or">or</string>
    <string name="signup">Đăng ký ngay</string>
    <string name="_login">Đăng nhập ngay</string>
    <string name="oldpass">Nhập mật khẩu cũ</string>
    <string name="newpass">Nhập mật khẩu mới</string>
    <string name="change">Xác nhận thay đổi</string>
    <string name="facebook">Nhập địa chỉ (nếu có)</string>
    <string name="registerannounce">Thêm một địa điểm vào danh sách</string>
    <string name="addregister_announce">Thêm địa điểm mới</string>

    <string name="app_name">Nhà Trọ</string>
    <string name="map_api_key">AIzaSyCUot19K8QpDiHjveAcO7M613ZIMl2Hagg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="us">\u0024</string>
    <string name="title_activity_details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="tieude2">Chọn sắp xếp</string>
    <string name="tieude3">Chọn</string>
    <string-array name="sapxeps">
        <item>Giá từ thấp đến cao</item>
        <item>Giá từ cao xuống thấp</item>
        <item>Sắp xếp </item>
    </string-array>
    <string name="title_activity_detail_screen">DetailScreen</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="supporttext">
        Tất cả thông tin trên ứng dụng được người dùng đóng góp.
        Chúng tôi sẽ không chịu bất cứ trách nhiệm gì về việc sử dụng thông tin của bạn.\n\n
        Hiện tại ứng dụng của chúng tôi đã trong giai đoạn thử nghiệm, nếu bạn thấy có ý kiến đóng góp hoặc
        nhận thấy hệ thống hoạt động lỗi, vui lòng thông báo cho chúng tôi!\n\n
        Chúng tôi xin chân thành cảm ơn bạn đã sử dụng ứng dụng của chúng tôi.
        Mọi thông tin liên hệ:\n\n
        Hotline: 01679969607\n
        Email: votongpm@gmail.com
    </string>
    <string name="fact" tools:ignore="TypographyEllipsis">
        Trong những năm gần đây, những người ngoại tỉnh đổ ra các thành phố lớn để làm ăn, học tập và sinh sống,
        kéo theo đó nhu cầu chỗ ở, nhà trọ ngày càng tăng cao.
        Trong thời buổi giá cả leo thang như hiện nay, việc tìm thuê một ngôi nhà hoặc phòng trọ ưng ý để ở riêng
        thật là một vấn để nan giải. Có nhiều nguyên nhân dẫn đến thực trạng này,
        một trong số những nguyên nhân chính là do người thuê trọ khó khăn khi tìm
        kiếm thông tin nhà trọ phù hợp với bản thân. Đa số thì người thuê trọ chỉ tìm
        được thông tin nhà trọ từ những lời giới thiệu, tờ rơi quảng cáo hoặc trên một vài trang mạng xã hội hoặc
        trực tiếp đi đến khu vực đó để tìm kiếm. Việc tìm kiếm thông tin này rất khó khăn dẫn đến nhiều vấn đề như
        giá cả không hợp lý, chất lượng phòng trọ không phù hợp, làm mất nhiều thời gian của người thuê trọ…\n\n
        Hiện nay có khá nhiều website có thể tìm kiếm nhà trọ tuy nhiên hiện nay smartphone là công cụ chủ yếu để mọi người duyệt web,
        từ đó những hạn chế của website cũng bắt đầu bộc lộ: các tính năng bị hạn chế, nội dung hiện thị không đầy đủ,
        không đem lại trải nghiệm mượt mà cho người dùng...vv , vì thế sự ra đời của một ứng để tìm kiếm nhà trọ là rất cần thiết.
    </string>
    <string name="infoapp">
        Nắm bắt được những nhu cầu trên của người dùng nên chúng tôi đã xây dựng nên một ứng dụng tìm chỗ ở, nhà trọ.
        Ứng dụng FMotel cung cấp một mạng tìm kiếm, chia sẽ thông tin chỗ ở, nhà trọ.\n\n
        Bạn có thể chia sẽ thông tin chỗ ở, nhà trọ của bạn đến mọi người.\n\n
        Bạn đang cần tìm một chỗ ở mới, bạn không có thời gian cho việc tìm kiếm khắp nơi, hay để FMotel giúp bạn nhé!\n\n
        Bạn không có nhiều thời gian online, bạn có thể chia sẽ thông tin và nhu cầu tìm kiếm chỗ ở của bạn với mọi người
        và có thể bạn sẽ được ai đó giúp đỡ, bằng cách đăng ký nhận thông tin, hệ thống sẽ thông báo cho bạn khi
        có phòng mới phù hợp với những yêu cầu mà bạn đang tìm kiếm.
    </string>
    <string name="function" tools:ignore="TypographyEllipsis">
        +\tCó thể tìm kiếm nhà trọ theo 2 hình thức - tìm theo danh sách và tìm trên bản đồ.\n\n
        +\tCó thể tìm kiếm theo ý của mình bằng bộ lọc có nhiều chức năng: lọc theo giá, khu vực, diện tích, số người ở, các tiện nghi,...\n\n
        +\tXem chi tiết về nhà trọ: hình ảnh, giá cả, vị trí, các thức liên lạc, tiện nghi, các bình luận về nhà trọ,...\n\n
        +\tTìm và xem chi tiết các tin tức tìm phòng trọ, tìm ở ghép.\n\n
        +\tCó thể liên lạc với người đăng tin qua gọi điện, nhắn tin, facebook.\n\n
        +\tCó thể gửi tin nhắn phản hồi để giúp cải thiện ứng dụng.\n\n
        +\tCó thể báo cáo những thông tin về chỗ ở, nhà trọ không chính xác.\n
    </string>

    <string name="title_activity_image__view">Image_View</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_manager_news">ManagerNews</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_manager">TabManager</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

</resources>
